# market-data

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
crates/market-data-cli/: Cargo.toml
crates/market-data-cli/src/: main.rs
crates/market-data-core/: Cargo.toml
crates/market-data-core/src/: candle.rs  error.rs  lib.rs  schema.rs  session.rs  store.rs  trading_calendar.rs
crates/market-data-providers/: Cargo.toml
crates/market-data-providers/src/: alpaca.rs  cboe.rs  error.rs  lib.rs  provider.rs  yahoo.rs
data/AMUU/2025/02/: 2025-02-13.parquet  2025-02-14.parquet  2025-02-18.parquet  2025-02-19.parquet  2025-02-20.parquet  2025-02-21.parquet  2025-02-25.parquet
data/AMUU/2025/03/: 2025-03-03.parquet  2025-03-04.parquet  2025-03-05.parquet  2025-03-06.parquet  2025-03-11.parquet  2025-03-12.parquet  2025-03-17.parquet  2025-03-18.parquet  2025-03-19.parquet  2025-03-20.parquet  2025-03-21.parquet  2025-03-24.parquet  2025-03-26.parquet  2025-03-27.parquet  2025-03-28.parquet  2025-03-31.parquet
data/AMUU/2025/04/: 2025-04-03.parquet  2025-04-04.parquet  2025-04-07.parquet  2025-04-09.parquet  2025-04-10.parquet  2025-04-11.parquet  2025-04-15.parquet  2025-04-16.parquet  2025-04-17.parquet  2025-04-21.parquet  2025-04-22.parquet  2025-04-23.parquet  2025-04-25.parquet  2025-04-30.parquet
data/AMUU/2025/05/: 2025-05-01.parquet  2025-05-05.parquet  2025-05-06.parquet  2025-05-08.parquet  2025-05-09.parquet  2025-05-12.parquet  2025-05-13.parquet  2025-05-14.parquet  2025-05-15.parquet  2025-05-16.parquet  2025-05-19.parquet  2025-05-20.parquet  2025-05-21.parquet  2025-05-22.parquet  2025-05-23.parquet  2025-05-27.parquet  2025-05-28.parquet  2025-05-29.parquet  2025-05-30.parquet
data/AMUU/2025/06/: 2025-06-02.parquet  2025-06-03.parquet  2025-06-04.parquet  2025-06-05.parquet  2025-06-06.parquet  2025-06-09.parquet  2025-06-10.parquet  2025-06-11.parquet  2025-06-12.parquet  2025-06-13.parquet  2025-06-16.parquet  2025-06-17.parquet  2025-06-18.parquet  2025-06-20.parquet  2025-06-23.parquet  2025-06-24.parquet  2025-06-25.parquet  2025-06-26.parquet  2025-06-27.parquet  2025-06-30.parquet
data/AMUU/2025/07/: 2025-07-01.parquet  2025-07-02.parquet  2025-07-03.parquet  2025-07-07.parquet  2025-07-08.parquet  2025-07-09.parquet  2025-07-10.parquet  2025-07-11.parquet  2025-07-14.parquet  2025-07-15.parquet  2025-07-16.parquet  2025-07-17.parquet  2025-07-18.parquet  2025-07-21.parquet  2025-07-22.parquet  2025-07-23.parquet  2025-07-24.parquet  2025-07-25.parquet  2025-07-28.parquet  2025-07-29.parquet  2025-07-30.parquet  2025-07-31.parquet
data/AMUU/2025/08/: 2025-08-01.parquet  2025-08-04.parquet  2025-08-05.parquet  2025-08-06.parquet  2025-08-07.parquet  2025-08-08.parquet  2025-08-11.parquet  (+14 more)
(+16936 files in other folders)
