[workspace]
resolver = "2"
members = [
    "crates/market-data-core",
    "crates/market-data-providers",
    "crates/market-data-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
arrow = "57"
parquet = { version = "57", features = ["arrow"] }
async-trait = "0.1"
tempfile = "3"
rust_decimal_macros = "1"

market-data-core = { path = "crates/market-data-core" }
market-data-providers = { path = "crates/market-data-providers" }
